mobile spacing and positioning fix for prototypes page

--- a/_sass/classes.sass
+++ b/_sass/classes.sass
@@ -183,28 +183,28 @@
     width: 100%
     height: auto
     padding: 0
-    margin-bottom: 1em
+    margin-bottom: .1em
 
   .containerprototyperight1
     position: relative
     width: 100%
     height: auto
     padding: 0
-    margin-bottom: 1em
+    margin-bottom: .8em
 
   .containerprototypeleft2
     position: relative
     width: 100%
     height: auto
     padding: 0
-    margin-bottom: 1em
+    margin-bottom: .8em
 
   .containerprototyperight2
     position: relative
     width: 100%
     height: auto
     padding: 0
-    margin-bottom: 1em
+    margin-bottom: .1em
 
 
 
